@@ -1,11 +1,15 @@
-﻿
-
-
-Minor League Baseball
+﻿Minor League Baseball
     Image with overlays
     tables
     nested lists
 
-
 "Hello, World!" program
     PRE tags
+
+Pablo Picasso
+    Gallerys
+
+Cohomology
+    Math (in DIVs not spans)
+    SUP
+
